--- a/css/stylo.css
+++ b/css/stylo.css
@@ -6,6 +6,19 @@ body {
     margin: 0;
     padding: 0;
 }
+#cabecera {
+    background: rgb(69, 255, 255);
+    box-shadow: 0px 2px 20px 0px rgb(255, 158, 255);
+    color: #b668f6;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+#cabecera #tagline {
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container {
     width: 70%;
     padding: 1em;
