--- a/css/stylo.css
+++ b/css/stylo.css
@@ -1,7 +1,7 @@
 body {
     color: indigo;
     text-align: center;
-    font-family: Courier;
+    font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
